# storysync-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  main.py
config/: __init__.py  prompts.py  settings.py
core/: __init__.py  audio_processor.py  pipeline.py  prompt_generator.py  story_analyzer.py  video_assembler.py  video_generator.py
examples/: brief_template.json  someone_you_might_brief.json  the_long_way_home_brief.json
models/: __init__.py  director_brief.py  project.py  scene.py
tests/: __init__.py  test_models.py
